# shtns

./: .gitlab-ci.yml  .hgignore  CHANGELOG  CHANGELOG.md  COPYRIGHT  Makefile  Makefile.in  README  README.md  SHT.c  SHT.h  SHT_example.c  SHT_example.f  SHT_example.py  SHTeo.c  SHTf77.c  SHTfast.c  TODO  config.h.in  configure  configure.ac  dct_sht.m  dct_sht_fftw.m  doxygen.conf  dyncin.c  fftw_time.c  grid.c  inc_B0ini.c  inc_U0ini.c  movie_line.m  movie_slice.py  plot_3D.m  plot_axi.py  plot_axisym.py  plot_disc.py  plot_slice.m  plot_slice.py  plot_slice_vect.py  plot_surf.py  run_xs.sh  (+46 more)
SHT/: Makefile  SH_to_spat.gen.c  ST_to_spat.gen.c  dct_SH_to_spat.gen.c  filter_inc.sh  fly_SH_to_spat.gen.c  fly_spat_to_SH.gen.c  hyb_SH_to_spat.gen.c  hyb_spat_to_SH.gen.c  kernel_SH_to_spat.gen.c  kernel_spat_to_SH.gen.c  mic_SH_to_spat.gen.c  mic_spat_to_SH.gen.c  omp_SH_to_spat.gen.c  omp_spat_to_SH.gen.c  sht_generic.c  sparse_SH_to_spat.gen.c  sparse_spat_to_SH.gen.c  spat_to_SH.gen.c
devtools/: dct_fftw.m  fft_int.m  gen_fft_int.m  idct_fftw.m  lgwt.m
doc/: doxygen.conf  main.dox
doc/faq_01_divergence_freeness/: .div_free_test.py.swp  .run_test.sh.swp
examples/: SHT_example.c  SHT_example.f  SHT_example.f90  SHT_example.py  SHT_fixed_m.py  shallow_water.py  sht_rot.py  test_rot.c  test_suite.c  wigner.c
fftw3/: cycle.h
